# react-native-fast-url

./: .gitignore  CONTRIBUTING.md  README.md  package.json  react-native-fast-url.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fasturl/: FastUrlBridge.java  FastUrlModule.java  FastUrlModuleImpl.java  FastUrlPackage.java
android/src/oldarch/java/com/fasturl/: FastUrlModule.java
cpp/: URLHostObjects.cpp  URLHostObjects.h  adademo.cpp  fast-url.cpp  fast-url.h  react-native-fast-url.cpp  react-native-fast-url.h  utils.h
example/: README.md  app.json  babel.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: .xcode.env  .xcode.env.local  File.swift  Podfile
example/ios/FastUrlExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/FastUrlExample.xcodeproj/: project.pbxproj
example/ios/FastUrlExample.xcworkspace/: contents.xcworkspacedata
example/ios/FastUrlExampleTests/: FastUrlExampleTests.m
example/src/: App.tsx  bench.ts
example/src/components/: Button.tsx  CorrectResultItem.tsx  IncorrectResultItem.tsx  Indentator.tsx  Suite.tsx  useColorTheme.ts
example/src/screens/: Home.tsx
example80/: index.js  metro.config.js  package.json
example80/android/: settings.gradle
example80/android/app/: build.gradle
example80/ios/: Podfile
example80/ios/example2.xcodeproj/: project.pbxproj
ios/: FastUrl.h  FastUrl.mm
src/: index.tsx  polyfill.ts
(+25 files in other folders)
